[package]
name = "quantcoin-core"
version = "0.1.0"
edition = "2021"
authors = ["Lead Protocol Architect"]
description = "QuantCoin: Hyper-Sharded Post-Quantum Layer 1 Blockchain"

[dependencies]
# Networking & P2P
libp2p = { version = "0.52", features = ["tcp", "dns", "mplex", "yamux", "websocket", "noise", "gossipsub"] }

# Cryptography (Post-Quantum)
# Note: Using pqcrypto crates for Dilithium-5 and Kyber-1024
pqcrypto-dilithium = "0.4"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"

# Hashing & Encoding
blake3 = "1.5"
sha2 = "0.10"
ripemd = "0.1"
base58check = "0.1"

# ZK-Proofs & State Compression
halo2_proofs = "0.3"

# Database & Storage
rocksdb = "0.21"
zstd = "0.13"

# Concurrency & Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.0-rc.3"

# Randomness
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
